updated readme and most recent VSC save

--- a/CDM web.html
+++ b/CDM web.html
@@ -5,8 +5,12 @@
   </head>
 
   <body>
-    <h1>My Digital Scrapbook<h1>
-		
+    <h1>My Digital Scrapbook</h1>
+        <p>In the digital era, this website will act as a digital scrapbook.<br/>
+          This way I won't have yet another book just laying around in my room collecting dust.</p>
+    
+<hr/> 
+
     <h2>Travel</h2> 
         <h3>Italy</h3>
         <h3>Mexico</h3>
