--- a/CDM web.html
+++ b/CDM web.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> My Digital Scrapbook </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
@@ -10,16 +11,21 @@
           This way I won't have yet another book just laying around in my room collecting dust.</p>
     
 <hr/> 
-
-    <h2>Travel</h2> 
-        <h3>Italy</h3>
+    <section>
+    <h2><a href="#travel">Travel</a></h2> 
+        <h3 id="travel">Italy</h3>
         <h3>Mexico</h3>
         <h3>Hawaii</h3>
         <h3>Florida</h3>
         <h3>Hilton Head</h3>
-    <h2>Local</h2>
-        <h3>Pittsburgh</h3>
+        </section>
+   <section>
+        <h2><a href="#local">Local</a></h2>
+        <h3 id="local">Pittsburgh</h3>
         <h3>Harrisburg</h3>
         <h3>Emlenton</h3>
+        </section>
+
+    <footer> </footer>
   </body>
 </html>
