idek what Im doing rn
I need to figure out how to actually get my css to link

--- a/CDMweb/index.html
+++ b/CDMweb/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> My Digital Scrapbook </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -13,7 +13,7 @@
 <hr/> 
     <section>
     <h2><a href="#travel">Travel</a></h2> 
-        <h3 id="travel">Italy</h3>
+        <h3>Italy</h3>
         <h3>Mexico</h3>
         <h3>Hawaii</h3>
         <h3>Florida</h3>
@@ -21,7 +21,7 @@
         </section>
    <section>
         <h2><a href="#local">Local</a></h2>
-        <h3 id="local">Pittsburgh</h3>
+        <h3>Pittsburgh</h3>
         <h3>Harrisburg</h3>
         <h3>Emlenton</h3>
         </section>
