--- a/CDMweb/index.html
+++ b/CDMweb/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> My Digital Scrapbook </title>
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -12,7 +12,7 @@
     
 <hr/> 
     <section>
-    <h2><a href="#travel">Travel</a></h2> 
+    <h2><a href="travel.html">Travel</a></h2> 
         <h3>Italy</h3>
         <h3>Mexico</h3>
         <h3>Hawaii</h3>
@@ -20,7 +20,7 @@
         <h3>Hilton Head</h3>
         </section>
    <section>
-        <h2><a href="#local">Local</a></h2>
+        <h2><a href="local.html">Local</a></h2>
         <h3>Pittsburgh</h3>
         <h3>Harrisburg</h3>
         <h3>Emlenton</h3>
