--- a/CDMweb/local.html
+++ b/CDMweb/local.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Local - My Digital Scrapbook</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h1>Local</h1>
