--- a/CDMweb/travel.html
+++ b/CDMweb/travel.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Travel - My Digital Scrapbook</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <h1>Travel</h1>
