alot of changes I forgot to upload

--- a/CDMweb/index.html
+++ b/CDMweb/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title> My Digital Scrapbook </title>
-    <link href="css/style.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Digital Scrapbook</title>
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Caveat&display=swap" rel="stylesheet" />
   </head>
 
   <body>
-    <h1>My Digital Scrapbook</h1>
-        <p>In the digital era, this website will act as a digital scrapbook.<br/>
-          This way I won't have yet another book just laying around in my room collecting dust.</p>
-    
-<hr/> 
-    <section>
-    <h2><a href="travel.html">Travel</a></h2> 
-        <h3>Italy</h3>
-        <h3>Mexico</h3>
-        <h3>Hawaii</h3>
-        <h3>Florida</h3>
-        <h3>Hilton Head</h3>
-        </section>
-   <section>
-        <h2><a href="local.html">Local</a></h2>
-        <h3>Pittsburgh</h3>
-        <h3>Harrisburg</h3>
-        <h3>Emlenton</h3>
-        </section>
+    <header>
+      <h1>My Digital Scrapbook</h1>
+      <p>
+        In the digital era, this website acts as a digital scrapbook.<br />
+        This way I won't have yet another book just laying around collecting dust.
+      </p>
+    </header>
 
-    <footer> </footer>
+    <main>
+      <section>
+        <h2><a href="travel.html">Travel Adventures</a></h2>
+        <ul>
+          <li>Italy</li>
+          <li>Mexico</li>
+          <li>Hawaii</li>
+          <li>Florida</li>
+          <li>Hilton Head</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2><a href="local.html">Local Experiences</a></h2>
+        <ul>
+          <li>Pittsburgh</li>
+          <li>Harrisburg</li>
+          <li>Emlenton</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2025 My Digital Scrapbook | <a href="travel.html">Travel</a> | <a href="local.html">Local</a></p>
+    </footer>
   </body>
 </html>
