--- a/CDMweb/local.html
+++ b/CDMweb/local.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta chartset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local - My Digital Scrapbook</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
