--- a/CDMweb/travel.html
+++ b/CDMweb/travel.html
@@ -1,16 +1,70 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Travel - My Digital Scrapbook</title>
+    <meta charset="UTF-8" />
+    <meta name ="viewport" content="width=device-width, initial-sclae=1.0" />
+    <title>Travel Adventures</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
-    <h1>Travel</h1>
-    <h3>Italy</h3>
-    <h3>Mexico</h3>
-    <h3>Hawaii</h3>
-    <h3>Florida</h3>
-    <h3>Hilton Head</h3>
-    <a href="index.html">Back to Home</a>
-  </body>
+<body>
+  <header>
+    <h1>Travel Adventures</h1>
+    <p>Here are some of my favorite travel memories!</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Hawaii – Maui</h2>
+      <div class="photo-gallery">
+        <img src="images/plane.jpg" alt="Plane ride from Texas to Maui">
+        <img src="images/balcony_view_palms.jpg" alt="View from balcony during the day">
+        <img src="images/balcony_view_sunset.jpg" alt="View from balcony at sunset">
+        <img src="images/bamboo_forest.jpg" alt="Hike through bamboo forest">
+        <img src="images/drink_palm.jpg" alt="Passionfruit margarita held up with palms">
+        <img src="images/hawaii_cat.jpg" alt="Little grey Hawaii tabby cat">
+        <img src="images/hibiscus.jpg" alt="Red hibiscus high in tree">
+        <img src="images/hike_trees.jpg" alt="Trail with cool trees">
+        <img src="images/hike_trees_sky.jpg" alt="Sky through trees">
+        <img src="images/me_beach.jpeg" alt="Me on the beach at dusk">
+        <img src="images/turtle_beach_sunset.jpg" alt="Turtle on the beach at sunset">
+        <img src="images/tree_roots.jpg" alt="Cool tree roots">
+        <img src="images/dad.jpg" alt="My dad feeling pretty">
+        <img src="images/rock_cliff.jpg" alt="Rocky coastline">
+        <img src="images/me_hike.jpg" alt="Me and dad hiking">
+        <img src="images/cliff_jump.jpg" alt="Cliff jumping spot">
+      </div>
+    </section>
+
+    <section>
+      <h2>Florida – St Pete & Clearwater</h2>
+      <div class="photo-gallery">
+        <img src="images/brunch_fl.jpg" alt="Friends at brunch">
+        <img src="images/hotel_fl.jpg" alt="Hotel in St Pete">
+        <img src="images/popsicles_fl.jpg" alt="Popsicles crew">
+        <img src="images/skateboard_fl.jpg" alt="Skateboard chillin'">
+        <img src="images/cafe_fl.jpg" alt="Cafe entrance">
+        <img src="images/inside_cafe_fl.jpg" alt="Inside cafe">
+        <img src="images/si_and_lil_fl.jpg" alt="Friends on sidewalk">
+        <img src="images/pawprint_fl.jpg" alt="Dog pawprint">
+        <img src="images/puppy_fl.jpg" alt="Cute lab in café">
+        <img src="images/hooter_fl.jpg" alt="Dolphin in Hooters gear">
+        <img src="images/mural_fl.jpg" alt="You Are My Sunshine mural">
+        <img src="images/naddy_polaroid_fl.jpg" alt="Naddy polaroid">
+        <img src="images/kenz_fl.jpg" alt="Kenzie with sunhat">
+        <img src="images/si_polaroid_fl.jpg" alt="Sierra with claws">
+      </div>
+    </section>
+
+    <section>
+      <h2>Hilton Head Island, SC</h2>
+      <p>Coming soon...</p>
+    </section>
+
+    <a href="index.html" class="back-link">← Back to Home</a>
+  </main>
+
+  <footer>
+    <a href="index.html">Home</a> | <a href="travel.html">Travel</a> | <a href="local.html">Local</a>
+  </footer>
+</body>
 </html>
