--- a/CDMweb/index.html
+++ b/CDMweb/index.html
@@ -16,7 +16,12 @@
         This way I won't have yet another book just laying around collecting dust.
       </p>
     </header>
-
+<body>
+  <img src="images/airplane_freepik.png" alt="Airplane vector black and white graphic"/>
+  <div style="position: relative;">
+    <img src="images/airplane_freepik.png" style="position: absolute; left: 60px; top: 120px;">
+  </div>
+</body>
     <main>
       <section>
         <h2><a href="travel.html">Travel Adventures</a></h2>
