--- a/CDMweb/index.html
+++ b/CDMweb/index.html
@@ -6,45 +6,42 @@
     <title>My Digital Scrapbook</title>
     <link href="css/style.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Caveat&display=swap" rel="stylesheet" />
-  </head>
-
-  <body>
-    <header>
-      <h1>My Digital Scrapbook</h1>
-      <p>
-        In the digital era, this website acts as a digital scrapbook.<br />
-        This way I won't have yet another book just laying around collecting dust.
-      </p>
-    </header>
-<body>
-  <div style="position: relative;">
-    <img src="images/airplane_freepik.png" style="position: absolute; left: 60px; top: 120px;">
-  </div>
-</body>
-    <main>
-      <section>
-        <h2><a href="travel.html">Travel Adventures</a></h2>
-        <ul>
-          <li>Italy</li>
-          <li>Mexico</li>
-          <li>Hawaii</li>
-          <li>Florida</li>
-          <li>Hilton Head</li>
-        </ul>
-      </section>
-
-      <section>
-        <h2><a href="local.html">Local Experiences</a></h2>
-        <ul>
-          <li>Pittsburgh</li>
-          <li>Harrisburg</li>
-          <li>Emlenton</li>
-        </ul>
-      </section>
-    </main>
-
-    <footer>
-      <p>© 2025 My Digital Scrapbook | <a href="travel.html">Travel</a> | <a href="local.html">Local</a></p>
-    </footer>
-  </body>
-</html>
+    </head>
+    <body>
+      <div class="background-wrapper">
+        <header>
+          <h1>My Digital Scrapbook</h1>
+          <p>
+            In the digital era, this website acts as a digital scrapbook.<br />
+            This way I won't have yet another book just laying around collecting dust.
+          </p>
+        </header>
+  
+        <main>
+          <section>
+            <h2><a href="travel.html">Travel Adventures</a></h2>
+            <ul>
+              <li>Italy</li>
+              <li>Mexico</li>
+              <li>Hawaii</li>
+              <li>Florida</li>
+              <li>Hilton Head</li>
+            </ul>
+          </section>
+  
+          <section>
+            <h2><a href="local.html">Local Experiences</a></h2>
+            <ul>
+              <li>Pittsburgh</li>
+              <li>Harrisburg</li>
+              <li>Emlenton</li>
+            </ul>
+          </section>
+        </main>
+  
+        <footer>
+          <p>© 2025 My Digital Scrapbook | <a href="travel.html">Travel</a> | <a href="local.html">Local</a></p>
+        </footer>
+      </div>
+    </body>
+  </html>
