--- a/CDMweb/local.html
+++ b/CDMweb/local.html
@@ -8,9 +8,35 @@
   </head>
   <body>
     <h1>Local</h1>
-    <h3>Pittsburgh</h3>
+  <main>
+    <section>
+      <h2>Pittsburgh</h2>
+      <div class="photo-gallery">
+        <img src="images/pgh1.jpg" alt="">
+        <img src="images/pgh2.jpg" alt="">
+        <img src="images/pgh4.jpg" alt="">
+        <img src="images/pgh3.jpg" alt="">
+        <img src="images/pgh6.jpg" alt="">
+        <img src="images/pgh7.jpg" alt="">
+        <img src="images/pgh11.jpg" alt="">
+        <img src="images/pgh5.jpg" alt="">
+        <img src="images/pgh9.jpg" alt="">
+        <img src="images/pgh8.jpg" alt="">
+        <img src="images/pgh10.jpg" alt="">
+        <img src="images/pgh12.jpg" alt="">
+        <img src="images/pgh13.jpg" alt="">
+        <img src="images/pgh14.jpg" alt="">
+        <img src="images/pgh15.jgp" alt="">
+      </div>
+    </section>
     <h3>Harrisburg</h3>
+    <p>Coming soon...</p>
     <h3>Emlenton</h3>
+    <p>Coming soon...</p>
     <a href="index.html">Back to Home</a>
+
+    <footer>
+      <a href="index.html">Home</a> | <a href="travel.html">Travel</a> | <a href="local.html">Local</a>
+    </footer>
   </body>
 </html>
