--- a/CDMweb/travel.html
+++ b/CDMweb/travel.html
@@ -60,6 +60,15 @@
       <p>Coming soon...</p>
     </section>
 
+    <section>
+      <h2>Italy</h2>
+      <p>Coming soon...</p>
+    </section>
+
+    <section>
+      <h2>Mexico</h2>
+      <p>Coming soon...</p>
+    </section>
     <a href="index.html" class="back-link">← Back to Home</a>
   </main>
 
