Added visual argument to website
adjusted html and css to fit

--- a/CDMweb/index.html
+++ b/CDMweb/index.html
@@ -18,6 +18,9 @@
         </header>
   
         <main>
+          <div class="hero-image">
+            <img src="images/poster.png" alt="poster for a cheap trip">
+          </div>
           <section>
             <h2><a href="travel.html">Travel Adventures</a></h2>
             <ul>
